OxtInstallation: bekannte JVM native-access-Warnings aus unopkg-Ausgabe herausfiltern
LibreOffice's unopkg läuft in einer JVM ohne --enable-native-access=ALL-UNNAMED –
die resultierenden WARNING-Zeilen sind unvermeidlich und werden nun unterdrückt.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>